Fixed collapsing issue at menu pages. Changed text family as requested by Wim to Arial.

--- a/ChickNorris/WebContent/resources/css/media-queries.css
+++ b/ChickNorris/WebContent/resources/css/media-queries.css
@@ -1,5 +1,9 @@
 @CHARSET "UTF-8";
 
+.CNtext {
+	font-family: "Arial Black", Gadget, sans-serif;
+}
+
 @media (max-width: 1200px) {
     .navbar-header {
         float: none;
